# talent-pool

./: .gitignore  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/config/: __init__.py  settings.py  urls.py
backend/core/: urls.py  views.py
backend/core/api/serializers/: __init__.py  profile.py
backend/core/api/views/: __init__.py  profile.py  register.py
backend/core/migrations/: 0001_initial.py  0002_delete_candidate.py  0003_initial.py
backend/core/models/: __init__.py  profile.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.tsx
frontend/src/app/: App.tsx  urls.ts
frontend/src/app/dashboard/: Dashboard.tsx
frontend/src/app/login/: Login.tsx
frontend/src/app/profile/: CreateProfile.tsx  ProfileForm.tsx
frontend/src/app/registration/: Register.tsx
frontend/src/app/ui-components/: NavBar.tsx
frontend/src/auth/: AuthContext.tsx
frontend/src/hooks/: profile.ts
frontend/src/models/profile/: api.ts  converters.ts  index.ts  types.ts
